2008-09-09  Aldy Hernandez  <aldyh@redhat.com>

	* function.h (struct function): Add function_start_locus.
	* cfgexpand.c (gimple_expand_cfg): Use it.
	* c-parser.c (c_parser_declaration_or_fndef): Set it.

2008-09-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/37433
	* tree-ssa-ccp.c (ccp_fold): Properly guard folding of
	function calls.

2008-09-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/37387
	* tree-ssa-ifcombine.c (ifcombine_iforif): Convert the name
	and bits to a common type.

2008-09-09  Nick Clifton  <nickc@redhat.com>

	* config/v850/v850.md (return): Restore frame size restriction.

2008-09-09  Paolo Bonzini  <bonzini@gnu.org>

	* c-common.c (c_expand_decl): Remove.
	* c-common.h (anon_aggr_type_p): Remove prototype.
	(DECL_ANON_UNION_ELEMS): Remove.
	* c-objc-common.h (LANG_HOOKS_EXPAND_DECL): Remove.
	* c-decl.c (anon_aggr_type_p): Remove.
	* langhooks-def.h (LANG_HOOKS_EXPAND_DECL): Remove.
	(LANG_HOOKS_INITIALIZER): Remove LANG_HOOKS_EXPAND_DECL.
	* langhooks.h (struct lang_hooks): Remove expand_decl.
	* langhooks.c (lhd_expand_decl): Remove.
	* stmt.c (expand_anon_union_decl): Remove.
	* tree.h (expand_anon_union_decl): Remove prototype.

2008-08-09  Andy Hutchinson  <hutchinsonandy@aim.com>

	PR target/36609
	* config/avr/avr.c (avr_reorg): Create RTL for reversed compare with
	zero.
	* config/avr/avr.md  (QISI) : Define mode iterator.
	(negated_tst<mode>) : Redefine as split using mode macro.
	(reversed_tstqi): Define insn as reversed compare with zero.
	(reversed_tsthi): Ditto.
	(reversed_tstsi): Ditto.

2008-09-08  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/37393
	* tree-inline.c (copy_bb): When replacing a gimple_call_va_arg_pack_p
	call stmt by new_call, clear gimple_bb on stmt after gsi_replace.

	PR middle-end/37414
	* predict.c (optimize_function_for_size_p): Don't segfault if
	FUN is NULL.
	* fold-const.c (LOGICAL_OP_NON_SHORT_CIRCUIT, fold_truthop,